# wakedev

./: Cargo.toml  PLAN.md  README.md
assets/brands/: SOURCES.md
assets/brands/codex/icons/: openai-blossom-light.icns
docs/: USAGE_GUIDE.md
docs/implementation/: remote-provider-plan.md
src/: cli.rs  config.rs  error.rs  main.rs  notification.rs
src/provider/: macos.rs  mod.rs
