[package]
name = "notifall"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "1.0.69"
toml = "0.8.19"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.9"
